--- a/datacenter/templates/index.html
+++ b/datacenter/templates/index.html
@@ -1,15 +1,27 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>数据中心</title>
-</head>
-<body>
-<h1 align="center">欢迎光临数据中心</h1>
-<form enctype="multipart/form-data" action="/upload/" method="post" style="padding: 10px">
-    {% csrf_token %}
-    x:<input type="file" name="x_file" style="padding: 10px"><br>
-    y:<input type="file" name="y_file" style="padding: 10px;"><br>
-    <input type="submit" value="提交" style="padding: 10px">
-</form>
-</body>
-</html>
+{% extends 'base.html' %}
+{% load staticfiles %}
+{% block title %}数据中心{% endblock %}
+{% block css %}
+    <link rel="stylesheet" href="{% static 'css/index.css' %}">
+{% endblock %}
+
+{% block content %}
+    <div class="container">
+        <div class="col-md-4 col-md-offset-4">
+            <form enctype="multipart/form-data" class='form-login' action="/upload/" method="post">
+                {% csrf_token %}
+                <h2 class="text-center">欢迎光临</h2>
+                <div class="form-group">
+                    <label for="id_username">X坐标文件：</label>
+                    <input type="file" name='x_file'>
+                </div>
+                <div class="form-group">
+                    <label for="id_password">Y坐标文件：</label>
+                    <input type="file" name='y_file'>
+                </div>
+                <button type="reset" class="btn btn-default pull-left">重置</button>
+                <button type="submit" class="btn btn-primary pull-right">提交</button>
+            </form>
+        </div>
+    </div> <!-- /container -->
+{% endblock %}
