Add function of showing the imgaes on the front page.

--- a/datacenter/templates/result.html
+++ b/datacenter/templates/result.html
@@ -8,10 +8,9 @@
 {% block content %}
     <div class="form-group">
         <p class="help-block">
-            {{ linear_reg }}<br>
-            {{ decision_tree }}<br>
-            {{ nearest_nei }}<br>
-            {{ random_for }}<br>
+            {{ best }}<br>
+            {{ trials }}<br>
+            <img src="{{ image }}"><br>
         </p>
     </div>
 {% endblock %}
