1.新增了account app，内含注册登录以及账号主页 2.数据库修改为Mysql 3.所有template迁移到/templates/appname，静态文件迁移到/static/appname

--- a/templates/datacenter/index.html
+++ b/templates/datacenter/index.html
@@ -1,8 +1,8 @@
-{% extends 'base.html' %}
+{% extends 'datacenter/base.html' %}
 {% load staticfiles %}
 {% block title %}数据中心{% endblock %}
 {% block css %}
-    <link rel="stylesheet" href="{% static 'css/index.css' %}">
+    <link rel="stylesheet" href="{% static 'datacenter/css/index.css' %}">
 {% endblock %}
 
 {% block content %}
