--- a/templates/datacenter/result.html
+++ b/templates/datacenter/result.html
@@ -1,8 +1,8 @@
-{% extends 'base.html' %}
+{% extends 'datacenter/base.html' %}
 {% load staticfiles %}
 {% block title %}数据中心{% endblock %}
 {% block css %}
-    <link rel="stylesheet" href="{% static 'css/index.css' %}">
+    <link rel="stylesheet" href="{% static 'datacenter/css/index.css' %}">
 {% endblock %}
 
 {% block content %}
