--- a/templates/datacenter/base.html
+++ b/templates/datacenter/base.html
@@ -38,8 +38,7 @@
                     <li class="active"><a href="#">主页 </a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">登录</a></li>
-                    <li><a href="#">注册</a></li>
+                    <li><a href="#">退出</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
