--- a/templates/base.html
+++ b/templates/base.html
@@ -29,17 +29,17 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">DataCenter</a>
+                <a class="navbar-brand" href="/">DataCenter</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="my-nav">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home </a></li>
+                    <li class="active"><a href="/">Home </a></li>
                 </ul>
-{#                <ul class="nav navbar-nav navbar-right">#}
-{#                    <li><a href="#">退出</a></li>#}
-{#                </ul>#}
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="/logout/">Exit</a></li>
+                </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </nav>
