--- a/templates/register.html
+++ b/templates/register.html
@@ -9,21 +9,29 @@
     <div class="container">
         <div class="row">
             <div style="height: 70px"></div>
-            <form class="dsweb-form" action="/login/" method="post">
+            <form class="dsweb-form" action="/register/" method="post">
                 {% csrf_token %}
                 <div style="margin: 0px 450px 0px 450px">
                     <h2 class="text-center">REGISTER</h2>
                     <div style="height: 30px"></div>
                     <div class="form-group">
                         <label for="id_username">username：</label>
-                        <input type="text" name='username'>
+                        <input type="text" name='username' value="{{ username }}">
+                        <span style="color: red">{{ name_error }}</span>
                     </div>
                     <div class="form-group">
                         <label for="id_password">password：</label>
                         <input type="password" name='password'>
+                        <span style="color: red">{{ pass_error }}</span>
                     </div>
-                    <button type="reset" class="btn btn-default pull-right" style="margin: 0px 5px 0px 5px">reset</button>
-                    <button type="submit" class="btn btn-primary pull-right">submit</button>
+                    <button type="reset" class="btn btn-default pull-right" style="margin: 5px">reset</button>
+                    <br>
+                    <br>
+                    <br>
+                    <a href="/">
+                        <button type="button" class="btn btn-danger pull-right" style="margin: 5px">cancel</button>
+                    </a>
+                    <button type="submit" class="btn btn-primary pull-right" style="margin: 5px">submit</button>
                 </div>
             </form>
         </div>
