--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,8 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="my-nav">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="/">Home </a></li>
+                    <li><a href="/">Home </a></li>
+                    <li><a href="/result/">Result</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="/logout/">Exit</a></li>
