--- a/templates/upload.html
+++ b/templates/upload.html
@@ -14,16 +14,17 @@
                 {% csrf_token %}
                 <h2 class="text-center">Please Upload the file</h2>
                 <div style="height: 30px"></div>
-                <div class="form-group">
-                    <label for="id_username">X_axis file：</label>
+                <div id="x_file" class="form-group">
+                    <label>X_axis file：</label>
                     <input type="file" name='x_file'>
                     <span style="color: red">{{ x_error }}</span>
                 </div>
-                <div class="form-group">
-                    <label for="id_password">Y_axis file：</label>
+                <div id="y_file" class="form-group">
+                    <label>Y_axis file：</label>
                     <input type="file" name='y_file'>
                     <span style="color: red">{{ y_error }}</span>
                 </div>
+
                 <button type="reset" style="margin: 0 5px 0 5px" class="btn btn-default pull-right">reset</button>
                 <button type="submit" class="btn btn-primary pull-right">calculate</button>
             </form>
@@ -36,6 +37,6 @@
         if (success_msg != ''){
             alert(success_msg)
         }
-    })
+    });
     </script>
 {% endblock %}
